syntax = "proto3";

package ariand.v1;

import "ariand/v1/enums.proto";
import "ariand/v1/category.proto";
import "google/protobuf/timestamp.proto";
import "google/type/money.proto";

option go_package = "ariand/gen/go/ariand/v1;ariandv1";

// Financial transaction
message Transaction {
  int64 id = 1;
  google.protobuf.Timestamp tx_date = 2;
  google.type.Money tx_amount = 3;
  TransactionDirection direction = 4;
  int64 account_id = 5;

  // metadata
  optional string email_id = 6;
  optional string description = 7;

  // categorization
  optional int64 category_id = 9;
  CategorizationStatus categorization_status = 10;

  // merchant & notes
  optional string merchant = 11;
  optional string user_notes = 12;

  // balance after this tx
  optional google.type.Money balance_after = 13;

  // AI suggestions
  repeated string suggestions = 14;

  // receipt linkage
  optional int64 receipt_id = 15;

  // FX details
  optional google.type.Money foreign_amount = 16;
  optional double exchange_rate = 17;

  google.protobuf.Timestamp created_at = 18;
  google.protobuf.Timestamp updated_at = 19;
  
  // Additional fields for API responses
  optional Category category = 20;
  optional string account_name = 21;
}

// Transaction with similarity score
message TransactionWithScore {
  Transaction transaction = 1;
  double merchant_score = 2;
}

// Transaction count by account
message TransactionCountByAccount {
  int64 account_id = 1;
  string account_name = 2;
  int64 transaction_count = 3;
}